# ILIFE_UI

./: .gitignore  README.md
simulation/catkin_test/src/beginner_tutorials/: CMakeLists.txt  package.xml
simulation/catkin_test/src/beginner_tutorials/src/: example_client.cpp  example_service.cpp
simulation/catkin_test/src/beginner_tutorials/srv/: ExampleServiceMsg.srv
src/: CMakeLists.txt  package.xml
src/include/robomap/: moc_colormaker.cpp  moc_colormaker.cpp_parameters  moc_main_window.cpp  moc_main_window.cpp_parameters  moc_mapp.cpp  moc_mapp.cpp_parameters  moc_mytest.cpp  moc_mytest.cpp_parameters  moc_qnode.cpp  moc_qnode.cpp_parameters  moc_romap.cpp  moc_romap.cpp_parameters  moc_rosclient.cpp  moc_rosclient.cpp_parameters  romap.h  rosclient.h
src/resources/: qtquickcontrols2.conf  resources.qrc.depends
src/resources/qml/: AlarmDelegate.qml  AlarmDialog.qml  AlarmModel.qml  AlarmSub.qml  ConnectSub.qml  ControlMap.qml  DeviceInfoSub.qml  FirmwareUpdateSub.qml  HistorySub.qml  LoadMap.qml  MainForm.qml  QmlCircularProgress.qml  SplashScreen.qml  Telecontrol.qml  TumblerDelegate.qml  View1.qml  View2.qml  View3.qml  main.qml
src/src/: main.cpp  mapp.cpp  qnode.cpp  romap.cpp  rosclient.cpp
src/srv/: ExampleServiceMsg.srv
src/ui/: romap.ui
